# igr

OpenGL_Projet/: CMakeLists.txt  main.cpp
QT_TP1/: TP_1.pro  assets.qrc  main.cpp  mainwindow.cpp  mainwindow.h
QT_TP2/: TP_2.pro  drawwindow.cpp  drawwindow.h  drawwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h
QT_helloworld/: hello_world.pro  main.cpp
rigid_body/RigidSim/src/: RigidSolver.hpp
